--- a/content/junior.html
+++ b/content/junior.html
@@ -1,3 +1,7 @@
+---
+title: FOSDEM Junior
+---
+
 <p>
   FOSDEM Junior is a collaboration between FOSDEM, Code Club, CoderDojo, developers, and volunteers to organise workshops and activities for children from age 7 to 17 during the FOSDEM weekend. These activities are for children to learn and get inspired about technology. Last year's activities included microcontrollers, embroidery, plotting, game development, mobile application development, Raspberry Pi's, and Java development.
 </p>
@@ -6,7 +10,5 @@
   Please consider volunteering if you plan on attending. You can sign up as a volunteer on the <a href="https://codeclub.org/en/clubs/c0468f47-a1a4-43b6-b7f0-170a7d98b30c" target="_blank">Code Club profile</a>.
 </p>
 
-<p>
-  Note that registration for individual workshops is required. Links can be found on the page of each activity.
-</p>
+
 
