Add FOSDEM Junior page

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -334,7 +334,7 @@ columns = 3
 
 <% unless juniortracks.empty? %>
   <p>
-    Further details are available on the <a href="page:/schedule/track/junior">FOSDEM Junior page</a>.
+    Further details are available on the <a href="page:/junior/">FOSDEM Junior page</a>.
   </p>
 <% end %>
 
