Update links in transportation.html
Fix broken links, upgrade to https where possible, add link about contactless cards.

Fixes #258

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -25,8 +25,8 @@ sponsors_under_navigation: true
 </p>
 
 <ul class="unstyled">
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://maps.google.com/?q=50.812375%204.38073">Google Maps</a></li>
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://www.openstreetmap.org/?mlat=50.812375&mlon=4.38073">OpenStreetMap</a></li>
+  <li><i class="icon-map-marker"></i> <a target="_blank" href="https://maps.google.com/?q=50.812375%204.38073">Google Maps</a></li>
+  <li><i class="icon-map-marker"></i> <a target="_blank" href="https://www.openstreetmap.org/?mlat=50.812375&mlon=4.38073">OpenStreetMap</a></li>
 </ul>
 
 <p>
@@ -47,7 +47,8 @@ sponsors_under_navigation: true
 
 <a name="bus"></a><h3>By bus, metro and/or tram</h3>
 
-<p>Bus/metro/tram lines provided by the public transport company, STIB/MIVB. Note you can hop in and buy your ticket in the transport by swiping your debit or credit card.</p>
+<p>Bus/metro/tram lines provided by the public transport company, STIB/MIVB.</p>
+<p>Note you can hop on and buy your ticket in the transport by <a href="https://www.stib-mivb.be/article.html?_guid=a0faf6a3-4e98-3810-4da8-80cff5834093&l=en">swiping your debit or credit card</a>.</p>
 <dl>
 <dt><strong>
   <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=25&amp;_directioncode=V"
@@ -129,7 +130,7 @@ Do not leave any valuables in your car!
 <p>
 The parkings of the campus can be very busy since early morning
 during both days. An alternative is to leave your car in the
-<a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
+<a href="https://www.interparking.be/en/parkings/brussels/sablon-poelaert/">
 Parking Sablon-Poelaert</a>, from there to take the
 <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=8&amp;_directioncode=F&amp;_mode=rt">Tram 8</a>,
 direction Roodebeek.
@@ -159,7 +160,7 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 <ul style="margin-top:0">
 <li>Take the <u>train</u> to Brussels</li>
 <li>Get off at <u>Brussels Central</u> station</li>
-<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=71">Bus 71</a>, direction Delta</li>
+<li>Take <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&_line=71&_directioncode=F&_mode=rt">Bus 71</a>, direction Delta</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li>
 </ul>
 </p>
@@ -177,22 +178,19 @@ If you need a taxi, we suggest calling Taxi Verts on
 <hr />
 <h2>Related resources</h2>
 <ul>
-<li><a target="_blank" href="http://en.wikivoyage.org/wiki/Brussels#Get_in"
+<li><a target="_blank" href="https://en.wikivoyage.org/wiki/Brussels#Get_in"
        title="Wikivoyage: How to get to Brussels">
       Wikivoyage: How to get to Brussels</a></li>
 <li><a target="_blank" href="https://www.ulb.be/en/solbosch/directions"
        title="Instructions on ULB website on how to get to the Solbosch campus">
       ULB: Getting to the Solbosch</a></li>
-<li><a target="_blank" href="http://www.stib.be/guide_gids_new.html?l=en"
-       title="Traveller's guide issued by STIB/MIVB">
-      STIB/MIVB: Traveller's guide</a></li>
-<li><a target="_blank" href="http://www.stib.be/abon_tickets.html?l=en"
+<li><a target="_blank" href="https://www.stib-mivb.be/abon_tickets.html?l=en"
        title="STIB/MIVB: Tickets and fares">STIB/MIVB: Tickets and fares
       </a></li>
-<li><a target="_blank" href="http://www.stib.be/reisweg-itineraire.html?l=en"
+<li><a target="_blank" href="https://www.stib-mivb.be/tripplanner/?l=en"
        title="STIB/MIVB: Journey Planner">STIB/MIVB: Journey Planner
       </a></li>
-<li><a target="_blank" href="http://www.stib.be/airport-line.html?l=en"
+<li><a target="_blank" href="https://www.stib-mivb.be/article.html?_guid=d07b4e96-1283-3410-f08c-e0c5cfea3859&l=en"
        title="STIB/MIVB: Airport Line">STIB/MIVB: Airport Line
       </a></li>
 </ul>
@@ -200,7 +198,7 @@ If you need a taxi, we suggest calling Taxi Verts on
 <hr />
 <h2>Maps</h2>
 <ul>
-<li><a href="http://www.stib-mivb.be/irj/go/km/docs/resource/Dynmaplan/index.html#en">Map of the Metro/Tram/Bus Network in Brussels</a></li>
-<li><a href="http://upload.wikimedia.org/wikipedia/commons/8/85/Metro_Brussels.svg">Map of Metro stations in Brussels (SVG)</a></li>
+<li><a href="https://www.stib-mivb.be/irj/go/km/docs/resource/Dynmaplan/index.html#en">Map of the Metro/Tram/Bus Network in Brussels</a></li>
+<li><a href="https://upload.wikimedia.org/wikipedia/commons/8/85/Metro_Brussels.svg">Map of Metro stations in Brussels (SVG)</a></li>
 </ul>
 
