--- a/content/index.html
+++ b/content/index.html
@@ -12,7 +12,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
   <div class="s-block">
 
     <div class="text-block">
-	    <center><h1>WELCOME TO FOSDEM 2025</h1></center>
+	     <h1>Welcome to FOSDEM 2025</h1>
        <p>FOSDEM is a free event for software developers to meet, share ideas and collaborate. Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.  You don't need to register.  Just turn up and join in!</p>
     </div>
 
@@ -23,13 +23,13 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     # "s-block" div. pph 20141210
     %>
   <div class="news-block">
-    <h2>NEWS</h2>
+    <h2>News</h2>
     <ul class="news-list">
       <% newsitems = @items.select {|item| item.identifier =~ %r{/headlines/}}.sort_by {|item| item[:created_at]}.reverse; newsitems[0,maxnews].each do |hl| %>
         <li class="news">
         <div class="date">
           <div class="holder">
-            <div class="frame"><%= hl[:created_at].strftime '%Y-%m-%d' %></div>
+            <time class="frame"><%= hl[:created_at].strftime '%Y-%m-%d' %></time>
           </div>
         </div>
         <h3><a href="page:<%= hl[:fullpost] %>"><%= hl[:title] %></a></h3>
@@ -69,24 +69,24 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
   </div>
 
   <div class="location-block">
-    <h2>LOCATION</h2>
+    <h2>Location</h2>
     <p>FOSDEM takes place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.  If you aren't there, you may watch the <a href="https://live.fosdem.org/">live streams</a> from the main tracks and developer rooms.  Note that talks in rooms beginning with D are pre-recorded and only accessible online.</p>
     <div class="location-info">
       <div class="map">
-        <img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"/>
+        <img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM">
       </div>
-      <div class="location-text">
+      <address class="location-text">
         <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
         <ul class="location-list">
-	  <li>ULB</li>
+	        <li>ULB</li>
           <li>Campus du Solbosch</li>
           <li>Av. F. D. Roosevelt 50</li>
           <li>1050 Bruxelles</li>
           <li>Belgium</li>
         </ul>
-        <div class="btn-location">
-          <a class="btn-purple" href="<%= pathof '/practical/transportation/' %>">venue &amp; travel</a>
-        </div>
+      </address>
+      <div class="btn-location">
+        <a class="btn-purple" href="<%= pathof '/practical/transportation/' %>">venue &amp; travel</a>
       </div>
     </div>
   </div>
