--- a/content/index.html
+++ b/content/index.html
@@ -72,9 +72,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <h2>Location</h2>
     <p>FOSDEM takes place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.  If you aren't there, you may watch the <a href="https://live.fosdem.org/">live streams</a> from the main tracks and developer rooms.  Note that talks in rooms beginning with D are pre-recorded and only accessible online.</p>
     <div class="location-info">
-      <div class="map">
-        <img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM">
-      </div>
+      <img class="map" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM">
       <address class="location-text">
         <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
         <ul class="location-list">
