Fix image alt text

--- a/content/about.html
+++ b/content/about.html
@@ -4,7 +4,7 @@ navtitle: About
 ---
 <div class="about-us">
   <div class="image-block">
-    <a href="#"><%= img '/assets/style/logo-big/' %></a>
+    <img src="asset:style/logo-big" alt="">
   </div>
   <div class="text-block">
     <h3>
