Fix internal links

--- a/content/about/sponsors.html
+++ b/content/about/sponsors.html
@@ -19,7 +19,7 @@ sponsors_root: true
   <%= l('/support/donate/', 'donations') %> page for more information.
 </p>
 
-<div id="s-quick-links"><br />
+<div id="s-quick-links"><br>
     <% cornerstone, other = sponsors.select{|s| s.include_in_toplevel?}.partition{|s| s.cornerstone?} %>
 
     <% unless cornerstone.empty? %>
@@ -39,7 +39,7 @@ sponsors_root: true
     <% end %>
 </div>
 
-<hr />
+<hr>
 
 <% [
     { title: 'Cornerstone sponsor', plural: true,  alpha: true,  id: 'cornerstone', section: '',       selector: lambda{|s| s.cornerstone?} },
@@ -49,13 +49,12 @@ sponsors_root: true
 %>
 <% unless index == 0 %><hr /><% end %>
 <% list = sponsors.select{|s| section[:section] == s.section }.select(&section[:selector]) %>
-<a name="<%= section[:id] %>"></a><h2><%= section[:title] %><% if section[:plural] and list.size > 1 %>s<% end %></h2>
+<h2 id="<%= section[:id] %>"><%= section[:title] %><% if section[:plural] and list.size > 1 %>s<% end %></h2>
 <% if section[:alpha] and list.size > 1 %>
     <span class="muted">(in alphabetical order)</span>
 <% end %>
 <% list.each_with_index do |s, i| %>
-<a name="<%= s.id %>"></a>
-<h2><a href="<%= s.url %>" title="<%= s.name %> website"><%= s.name %></a></h2>
+<h2 id="<%= s.id %>"><a href="<%= s.url %>" title="<%= s.name %> website"><%= s.name %></a></h2>
 <div class="s-unit<% if (i+1) == list.size %> s-unit-last<% end %>">
 <% if s.logo? %>
 <% if s.url? %><a href="<%= s.url %>" title="<%= s.name %> website"><% end %>
