Simplify layout, add phone link, better HTML links

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -5,8 +5,6 @@ sponsors_under_navigation: true
 ---
 <p>FOSDEM will take place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
 
-<img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"/>
-
 <div class="location-text">
   <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
   <ul class="location-list">
@@ -16,36 +14,32 @@ sponsors_under_navigation: true
     <li>1050 Bruxelles</li>
     <li>Belgium</li>
   </ul>
+  <p>
+    FOSDEM is easy to reach by public transport.
+    For details, see below.
+    If you are afraid of getting lost, the following links may be helpful:
+  </p>
+  
+  <ul class="unstyled">
+    <li><i class="icon-map-marker"></i> <a target="_blank" href="https://maps.google.com/?q=50.812375%204.38073">Google Maps</a></li>
+    <li><i class="icon-map-marker"></i> <a target="_blank" href="https://www.openstreetmap.org/?mlat=50.812375&mlon=4.38073">OpenStreetMap</a></li>
+  </ul>
+  
+  <p>
+    GPS coordinates:
+  </p>
+  
+  <ul>
+    <li><strong>Latitude:</strong> N50.812375</li>
+    <li><strong>Longitude:</strong> E4.380734</li>
+  </ul>
 </div>
 
-<p>
-  FOSDEM is easy to reach by public transport.
-  For details, see below.
-  If you are afraid of getting lost, the following links may be helpful:
-</p>
+<img class="map" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM">
 
-<ul class="unstyled">
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="https://maps.google.com/?q=50.812375%204.38073">Google Maps</a></li>
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="https://www.openstreetmap.org/?mlat=50.812375&mlon=4.38073">OpenStreetMap</a></li>
-</ul>
+<hr>
 
-<p>
-  GPS coordinates:
-</p>
-
-<ul>
-  <li><strong>Latitude:</strong> N50.812375</li>
-  <li><strong>Longitude:</strong> E4.380734</li>
-</ul>
-
-<br />
-<br />
-<br />
-<br />
-<br />
-<hr/>
-
-<a name="bus"></a><h3>By bus, metro and/or tram</h3>
+<h3 id="bus">By bus, metro and/or tram</h3>
 
 <p>Bus/metro/tram lines provided by the public transport company, STIB/MIVB.</p>
 <p>Note you can hop on and buy your ticket in the transport by <a href="https://www.stib-mivb.be/article.html?_guid=a0faf6a3-4e98-3810-4da8-80cff5834093&l=en">swiping your debit or credit card</a>.</p>
@@ -86,19 +80,19 @@ sponsors_under_navigation: true
 
 </dl>
 
-<a name="train"></a><h3>By train</h3>
+<h3 id="train">By train</h3>
 <p>From <strong>Brussels South</strong> (a.k.a. "<strong>Bruxelles Midi</strong>", "<strong>Brussel Zuid</strong>" or "<strong>Gare du Midi</strong>") Station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
 <li>Take the <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=2&amp;_directioncode=F&amp;_mode=rt">Metro line 2</a>, direction Elisabeth</li>
 <li>Get off at station <u>Louise</u></li>
 <li>Take the <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=8&amp;_directioncode=F&amp;_mode=rt">Tram 8</a>, direction Roodebeek</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
-<br />
+<br>
 <p>From <strong>Brussels Central</strong> ("<strong>Bruxelles Central</strong>", "<strong>Brussel Centraal</strong>" or "<strong>Gare Centrale</strong>") station (about <strong>20 minutes</strong>):
 <ul style="margin-top:0">
 <li>Take <a href=""https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=71&amp;_directioncode=F&amp;_mode=rt>Bus 71</a>, direction Delta</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
-<br />
+<br>
 <p>From <strong>Brussels North</strong> ("<strong>Bruxelles Nord</strong>" or "<strong>Gare du Nord</strong>") station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
 <li>Take <a href="https://www.stib-mivb.be/horaires-dienstregeling2.html?l=en&amp;_line=25&amp;_directioncode=V">Tram 25</a>, direction Boondael Gare</li>
@@ -109,7 +103,7 @@ sponsors_under_navigation: true
 <li><a href="http://www.belgianrail.be/jp/nmbs-realtime/stboard.exe/en?input=8811411&boardType=dep&time=18:30-60&date=<%= days.last[:conference_day].strftime('%d/%m/%Y') %>&start=yes">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
 </p>
 
-<a name="parking"></a><h3>By car: parking</h3>
+<h3 id="parking">By car: parking</h3>
 <p>
 If you come to FOSDEM by car, you can park your car on the campus.
 The <strong>main parking</strong> is located between Janson and the K building.
@@ -122,7 +116,7 @@ An <strong>additional parking</strong> on the campus is available next
 to the U building at Av. Antoine Depage. Note that this is a one-way
 street, only accessible from Av. Franklin Roosevelt as well.
 </p>
-<img style="float: right; text-align: right" src="asset:bluezone" alt="Traffic sign: blue zone" title="Traffic sign: blue zone"}/>
+<img style="float: right; text-align: right" src="asset:bluezone" alt="Traffic sign: blue zone" title="Traffic sign: blue zone"}>
 <p>
 You can park on the campus at your own risk.
 Do not leave any valuables in your car!
@@ -154,7 +148,7 @@ charge. More information can be found <a href="https://www.lez.brussels/en">here
 </p>
 
 
-<a name="plane"></a><h3>By plane</h3>
+<h3 id="plane">By plane</h3>
 <p>
 From Brussels International Airport, located in <b>Zaventem</b> (about 50 minutes):
 <ul style="margin-top:0">
@@ -165,17 +159,17 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 </ul>
 </p>
 
-<a name="taxi"></a><h3>By taxi</h3>
+<h3 id="taxi">By taxi</h3>
 <p>
 If you need a taxi, we suggest calling Taxi Verts on
-<tt>+32 2 349 49 49</tt>. The address of the venue is:
-<br/> &nbsp; ULB Campus Solbosch
-<br/> &nbsp; 50, Av. Franklin D. Roosevelt
-<br/> &nbsp; 1050 Bruxelles
-<br/>The location where taxis expect to pick you up is marked on the map.
+<a href="tel:+32 2 349 49 49">+32 2 349 49 49</a>. The address of the venue is:
+<br>ULB Campus Solbosch
+<br>50, Av. Franklin D. Roosevelt
+<br>1050 Bruxelles
+<br>The location where taxis expect to pick you up is marked on the map.
 </p>
 
-<hr />
+<hr>
 <h2>Related resources</h2>
 <ul>
 <li><a target="_blank" href="https://en.wikivoyage.org/wiki/Brussels#Get_in"
@@ -195,7 +189,7 @@ If you need a taxi, we suggest calling Taxi Verts on
       </a></li>
 </ul>
 
-<hr />
+<hr>
 <h2>Maps</h2>
 <ul>
 <li><a href="https://www.stib-mivb.be/irj/go/km/docs/resource/Dynmaplan/index.html#en">Map of the Metro/Tram/Bus Network in Brussels</a></li>
