Formatting phone numbers and HTML

--- a/content/contact.html
+++ b/content/contact.html
@@ -38,12 +38,12 @@ title: Contact
 
 <p>
   During the event, the Infodesk is reachable by phone using the number
-  <span class="tel">+32 2 7887474</span> (for <u><b>urgent</b></u> matters only, please).
+  <a class="tel" hef="tel:+3227887474">+32 2 788 74 74</a> (for <u><strong>urgent</strong></u> matters only, please).
 </p>
 
 <p>
   For press inquiries <u><b>only</b></u>, please contact Mark Van den Borre,
-  <span class="tel">+32 486 961726</span>,
+  <a class="tel" href="tel:+32486961726">+32 486 96 17 26</a>,
   <a href="mailto:mvandenborre@fosdem.org">mvandenborre@fosdem.org</a> (NL, EN).
 </p>
 
@@ -51,7 +51,7 @@ title: Contact
 <h3>Sponsor</h3>
 
 <p>
-  For sponsorship inquiries <u><b>only</b></u>, please contact
+  For sponsorship inquiries <u><strong>only</strung></u>, please contact
   <a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a>.
 </p>
 
