--- a/content/faq.html
+++ b/content/faq.html
@@ -4,9 +4,9 @@ navtitle: FAQ
 ---
 <div class="developers-block">
     <div class="text-block">
-        <h4>Contents</h4>
+        <h2>Contents</h2>
         <ul>
-	    <li><a href=#cfp">CFP</a></li>
+            <li><a href="#cfp">CFP</a></li>
             <li><a href="#video">Visiting and videos</a></li>
             <li><a href="#video-recordings">Recordings</li>
             <li><a href="#registration">Registration</a></li>
@@ -16,19 +16,17 @@ navtitle: FAQ
 </div>
 <div class="developers-block">
     <div class="text-block">
-        <a name="cfp"></a>
-	<h4>CFP</h4>
-	<h5><span class="label label-info">Q:</span> When will the CFP open?</h5>
+	<h3 id="cfp">CFP</h3>
+	<h4><span class="label label-info">Q:</span> When will the CFP open?</h4>
 	<p>
-	    The CFP has closed. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/rss.xml">rss feed</a>.
+	    The CFP has closed. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/rss.xml">RSS feed</a>.
 	</p>
-        <a name="video"></a>
-        <h4>Visiting and videos</h4>
-        <h5><span class="label label-info">Q:</span> In what timezone are you?</h5>
+        <h3 id="video">Visiting and videos</h3>
+        <h4><span class="label label-info">Q:</span> In what timezone are you?</h4>
         <p>
             The conference is in Brussels time, which is CET (UTC + 1).
         </p>
-        <h5><span class="label label-info">Q:</span> I need a formal invitation for a VISA request</h5>
+        <h4><span class="label label-info">Q:</span> I need a formal invitation for a VISA request</h4>
         <p>
             For legal reasons, the FOSDEM organization can only issue such letters of invitation to “main track” speakers for whom we also make
 travel and hotel arrangements.
@@ -40,13 +38,12 @@ someone you know locally who is involved in the project and ask them to invite y
 
         <p>For information regarding Belgian visa requirements, we refer you to <a href="https://diplomatie.belgium.be/en/travel-belgium/visa-belgium">the website of the Belgian ministry of foreign affairs</a>.
         </p>
-        <h5><span class="label label-info">Q:</span> Where can I watch the talks?</h5>
+        <h4><span class="label label-info">Q:</span> Where can I watch the talks?</h4>
         <p>
             All talks can be watched from our website. Go to <a href="page:schedule">schedule</a>, find the topic you are interested in, click on the
             <i>Watch the live stream</i>-link and enjoy the presentation.
         </p>
-        <a name="video-recordings"></a>
-        <h5><span class="label label-info">Q:</span> Are talk recordings available?</h5>
+        <h4 id="video-recordings"><span class="label label-info">Q:</span> Are talk recordings available?</h4>
         <p>
             All talk recordings will be made available on
             <a href="https://video.fosdem.org/2025/">video.fosdem.org/2025</a> as soon as the presenter reviewed the contents to
@@ -56,26 +53,24 @@ someone you know locally who is involved in the project and ask them to invite y
             This will usually take a few days to a few weeks, check <a href="https://video.fosdem.org/2025">video.fosdem.org/2025</a>
             for updates!
         </p>
-        <h5><span class="label label-info">Q:</span> Is there a job corner?</h5>
+        <h4><span class="label label-info">Q:</span> Is there a job corner?</h4>
         <p>
             Yes! Visit the H building to see the job corner.
         </p>
-        <a name="registration"></a>
-        <h4>Registration</h4>
-        <h5><span class="label label-info">Q:</span> I plan on visiting FOSDEM, where can I register?</h5>
+        <h3 id="registration">Registration</h3>
+        <h4><span class="label label-info">Q:</span> I plan on visiting FOSDEM, where can I register?</h4>
         <p>No registration is required.</p>
 
-        <h5><span class="label label-info">Q:</span> How much does a entry ticket for FOSDEM cost?</h5>
+        <h4><span class="label label-info">Q:</span> How much does a entry ticket for FOSDEM cost?</h4>
         <p>Attendance is free, including access to all talks and facilities.</p>
 
-        <h5><span class="label label-info">Q:</span> If entrance to FOSDEM is free, who pays the expenses?</h5>
+        <h4><span class="label label-info">Q:</span> If entrance to FOSDEM is free, who pays the expenses?</h4>
         <p>We have two sources of income: <a href="page:/support/donate/">donations</a> from our visitors and <a href="page:/about/sponsors/">sponsorship</a>.</p>
 
-        <h5><span class="label label-info">Q:</span> My company loves FOSDEM, what are the sponsoring possibilities?</h5>
+        <h4><span class="label label-info">Q:</span> My company loves FOSDEM, what are the sponsoring possibilities?</h4>
         <p>Have a look at the <a href="page:/about/sponsors/">sponsor</a> page.</p>
-        <a name="fosdem"></a>
-        <h4>FOSDEM in general</h4>
-        <h5><span class="label label-info">Q:</span> There is a mistake on the website, where do I report it?</h5>
+        <h3 id="fosdem">FOSDEM in general</h3>
+        <h4><span class="label label-info">Q:</span> There is a mistake on the website, where do I report it?</h4>
         <p>
             You can talk to us at the Infodesk (K or H), in the <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">Infodesk</a> channel on <i>chat.fosdem.org</i> or open an issue on our
             <a href="https://github.com/FOSDEM/website">Github repository</a>. Pull requests welcome!
