--- a/content/schedule/roomtracks.html
+++ b/content/schedule/roomtracks.html
@@ -11,7 +11,7 @@ buildings_path = $item_by_id.fetch('/schedule/buildings/').path
 $track_flatlist.reject{|dayslug, list| list.empty?}.each do |dayslug, flatlist_by_room|
   d = $to_day.call(dayslug)
 %>
-<a name="<%= d[:slug] %>"></a><h2><%= d[:title] %></h2>
+<h2 id="<%= d[:slug] %>"><%= d[:title] %></h2>
 <table class="table table-striped table-bordered table-condensed roomtracks">
   <%
     interval = $timetable.fetch(d[:slug]).fetch(:interval)
