--- a/content/schedule/streaming.html
+++ b/content/schedule/streaming.html
@@ -17,7 +17,7 @@ sponsors_under_navigation: true
   end
   current_date = current_time.to_date
 %>
-<p>Links to the live streaming in each room will appear on this page during the conference.</a>
+<p>Links to the live streaming in each room will appear on this page during the conference.</p>
 <p>Static overviews of the <a href="<%= $item_by_id.fetch('/schedule/rooms/').path %>">rooms</a> and the 
 <a href="<%= $item_by_id.fetch('/schedule/roomtracks/').path %>">room occupation by track</a>
 are available, too.</p>
