--- a/content/about.html
+++ b/content/about.html
@@ -101,6 +101,7 @@ navtitle: About
     <a name="team"></a><h2>The team</h2>
     <small>in alphabetical order</small>
     <ul>
+      <li>Klaus Aigner</li>
       <li>Linda Calders</li>
       <li>Dan Clark</li>
       <li>Quint Daenen</li>
@@ -118,6 +119,7 @@ navtitle: About
       <li>Alex Howe</li>
       <li>Alasdair Kergon</li>
       <li>Vasil Kolev</li>
+      <li>Thibault Molleman</li>
       <li>Marthe Parada Delgado</li>
       <li>Jonas Scheers</li>
       <li>Kristian Schuhmacher</li>
