--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -3,35 +3,30 @@ title: Practical information
 navcat: true
 ---
 
-<a name="registration"></a>
-<h3>Registration and cost</h3>
+<h3 id="registration">Registration and cost</h3>
 <p>
   FOSDEM is free to attend.  There is no registration.  Just turn up!
-  <br/>
+  <br>
   The conference is primarily funded by <a
   href="page:about/sponsors">sponsors</a> and the sale of t-shirts but
   we also gratefully accept <a href="page:support/donate">donations</a>.
 </p>
 
-<a name="venue"></a>
-<h3>Getting there</h3>
+<h3 id="venue">Getting there</h3>
 <p>See <a href="page:practical/transportation">transportation</a>.
 
-<a name="timezone"></a>
-<h3>Timezone</h3>
+<h3 id="timezone">Timezone</h3>
 <p>
   All the times on this website are displayed in the local time zone for Brussels which is Central European Time, CET (UTC+1).
 </p>
 
-<a name="services"></a>
-<h3>Services during FOSDEM</h3>
+<h3 id="services">Services during FOSDEM</h3>
 <p>
   There are a number of free services available to visitors during the event, <a
   href="page:practical/services">see details here.</a>
 </p>
 
-<a name="conduct"></a>
-<h3>Code of Conduct</h3>
+<h3 id="conduct">Code of Conduct</h3>
 <p>
   In order to keep FOSDEM a fun, interesting and positive experience for
   everybody, we expect participants to follow the
@@ -39,8 +34,7 @@ navcat: true
 </p>
 
 <% if not @site.config.fetch(:virtual) %>
-<a name="jobcorner"></a>
-<h3>Job Corner</h3>
+<h3 id="jobcorner">Job Corner</h3>
 <p>
   Some passive recruitment is allowed for open source positions and
   contracting. See
@@ -48,8 +42,7 @@ navcat: true
 </p>
 <% end %>
 
-<a name="other"></a>
-<h3>Further information</h3>
+<h3 id="other">Further information</h3>
 <p>
   The <a href="https://lists.fosdem.org/mailman/listinfo/fosdem">fosdem@ mailing
   list</a> is a good place to ask for more information.
