--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -5,46 +5,59 @@ sponsors_under_navigation: true
 <%
 # vim: set ts=2 sw=2 et ai ft=eruby:
 %>
-Ways to have the schedule with you at all times, without wasting trees: 
+Ways to have the schedule with you at all times, without wasting trees.
 
-<h3>Apps for Mobile Devices, checked for 2024</h3>
+<h2>Apps for Mobile Devices, checked for 2024</h2>
+
+<h3>Progressive Web Apps</h3>
 <ul>
-<li><b>Progressive Web App: Sojourner</b><br />
-    <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
-    Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
+<li><a href="https://fosdem.sojourner.rocks">Sojourner</a><br>
+    <a href="https://github.com/loomchild/sojourner-web">Source code</a>
 </li>
-<li><b>Android: FOSDEM Companion</b><br />
-    <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-Droid</a>.<br />
+</ul>
+
+<h3>Android</h3>
+<ul>
+<li>FOSDEM Companion<br>
+    <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br>
+    Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-Droid</a>.
 </li>
-<li><b>Android: FOSDEM Schedule</b><br />
-    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2024">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-Droid</a><br />
+<li>FOSDEM Schedule<br>
+    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2024">Source code</a>,<br>
+    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-Droid</a><br>
 </li>
-<li><b>Android: Giggity</b><br />
-    <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-Droid</a>.<br />
+<li>Giggity<br>
+    <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br>
+    Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-Droid</a>.<br>
 </li>
-<li><b>iOS: FOSDEM.app</b><br />
-    <a href="https://github.com/mttcrsp/fosdem">Source code</a>,<br />
-    Available from <a href="https://apps.apple.com/app/fosdem-app/id1513719757">the Apple App Store</a>.<br />
+</ul>
+
+<h3>iOS</h3>
+<ul>
+<li>FOSDEM.app<br>
+    <a href="https://github.com/mttcrsp/fosdem">Source code</a>,<br>
+    Available from <a href="https://apps.apple.com/app/fosdem-app/id1513719757">the Apple App Store</a>.<br>
 </li>
-<li><b>KDE Plasma: Kongress</b><br />
-    <a href="https://invent.kde.org/utilities/kongress">Source code</a><br />
-    Available from <a href="https://kdebuild.manjaro.org/images/">Manjaro</a>, <a href="https://postmarketos.org/">postmarketOS</a>, <a href="https://flathub.org/apps/details/org.kde.kongress">Flathub</a> and more.<br />
+</ul>
+
+<h3>Others</h3>
+<ul>
+<li>KDE Plasma: Kongress<br>
+    <a href="https://invent.kde.org/utilities/kongress">Source code</a><br>
+    Available from <a href="https://kdebuild.manjaro.org/images/">Manjaro</a>, <a href="https://postmarketos.org/">postmarketOS</a>, <a href="https://flathub.org/apps/details/org.kde.kongress">Flathub</a> and more.<br>
 </li>
-<li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
-    <a href="https://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
-    Available in official Debian, Ubuntu and Maemo5 repositories,<br />
-    (the successor of <a href="https://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
+<li>QT-based (Desktops, Maemo5): confclerk<br>
+    <a href="https://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br>
+    Available in official Debian, Ubuntu and Maemo5 repositories,<br>
+    (the successor of <a href="https://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br>
 </li>
-<li><b>Sailfish OS: FOSDEM QML</b><br />
-	<a href="https://gitlab.com/fabrixxm/harbour-fosdem-qml">Source code</a>,<br />
-	Available from the Sailfish Store.<br />
+<li>Sailfish OS: FOSDEM QML<br>
+	<a href="https://gitlab.com/fabrixxm/harbour-fosdem-qml">Source code</a>,<br>
+	Available from the Sailfish Store.<br>
 </li>
-<li><b>GTK Mobile/Desktop: Confy</b><br />
-    <a href="https://confy.kirgroup.net">Website and source code</a>,<br />
-    Available in AUR for ArchLinux.<br />
+<li>GTK Mobile/Desktop: Confy<br>
+    <a href="https://confy.kirgroup.net">Website and source code</a>,<br>
+    Available in AUR for ArchLinux.<br>
 </li>
 </ul>
 
@@ -52,61 +65,61 @@ Ways to have the schedule with you at all times, without wasting trees:
 Others? Or tested one of the below for this year? Let us know on our mailinglist: <a href="mailto:fosdem@lists.fosdem.org">apps@lists.fosdem.org</a>.
 </p>
 
-<hr />
+<hr>
 
-<h3>Apps for Mobile Devices, archive</h3>
+<h2>Apps for Mobile Devices, archive</h2>
 <ul>
-<li><b>Android: FOSDEM (2020)</b><br />
-    <a href="https://github.com/PeterMathijssen/aia/blob/master/fosdem_xml_12.aia">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br />
+<li><strong>Android: FOSDEM (2020)</strong><br>
+    <a href="https://github.com/PeterMathijssen/aia/blob/master/fosdem_xml_12.aia">Source code</a>,<br>
+    Available from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br>
 </li>
-<li><b>Generic mobile web interface (2020)</b><br />
-    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
+<li><strong>Generic mobile web interface (2020)</strong><br>
+    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br>
 </li>
-<li><b>iPhone: fosdem-org (2020)</b><br />
-    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
-    Available from <a href="https://apps.apple.com/au/app/fosdem-org/id941904933">the Apple App Store</a>.<br />
+<li><strong>iPhone: fosdem-org (2020)</strong><br>
+    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br>
+    Available from <a href="https://apps.apple.com/au/app/fosdem-org/id941904933">the Apple App Store</a>.<br>
 </li>
-<li><b>Windows Phone: FOSDEM (2020)</b><br />
-    <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
-    Older release available from the <a href="https://www.microsoft.com/en-us/p/fosdem/9nblggh5j4kd">Microsoft Store</a>.<br />
+<li><strong>Windows Phone: FOSDEM (2020)</strong><br>
+    <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br>
+    Older release available from the <a href="https://www.microsoft.com/en-us/p/fosdem/9nblggh5j4kd">Microsoft Store</a>.<br>
 </li>
-<li><b>Ubuntu Phone: FOSDEM (2020)</b><br />
-    <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
-    Available from the <a href="https://open-store.io/app/fosdem-qml.delijati">OpenStore</a>.<br />
+<li><strong>Ubuntu Phone: FOSDEM (2020)</strong><br>
+    <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br>
+    Available from the <a href="https://open-store.io/app/fosdem-qml.delijati">OpenStore</a>.<br>
 </li>
-<li><b>N900: Sojourner (2019)</b><br />
-    <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
-    Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
+<li><strong>N900: Sojourner (2019)</strong><br>
+    <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br>
+    Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br>
     Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.4/sojourner_0.3.4_all.deb">deb package</a>
 </li>
-<li><b>Android: fosdem-android</b><br />
-    <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
-    <a href="https://github.com/rkallensee/fosdem-android">GitHub fork of 2013</a>,<br />
-    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">APK download</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=org.fosdem">Google Play</a>.<br />
+<li><strong>Android: fosdem-android</strong><br>
+    <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br>
+    <a href="https://github.com/rkallensee/fosdem-android">GitHub fork of 2013</a>,<br>
+    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">APK download</a>,<br>
+    Available from <a href="https://play.google.com/store/apps/details?id=org.fosdem">Google Play</a>.<br>
 </li>
-<li><b>iPhone: fosdem-iphone</b><br />
-    <a href="https://github.com/leonhandreke/fosdem">Source code</a>,<br />
-    Available from <a href="https://itunes.apple.com/gb/app/fosdem/id595196580?mt=8">the Apple Store</a>.<br />
+<li><strong>iPhone: fosdem-iphone</strong><br>
+    <a href="https://github.com/leonhandreke/fosdem">Source code</a>,<br>
+    Available from <a href="https://itunes.apple.com/gb/app/fosdem/id595196580?mt=8">the Apple Store</a>.<br>
 </li>
-<li><b>WebOS: fosdem-webos</b><br />
-    <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br />
-    Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a>,<br />
-    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">IPK download</a>.<br />
+<li><strong>WebOS: fosdem-webos</strong><br>
+    <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br>
+    Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a>,<br>
+    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">IPK download</a>.<br>
 </li>
-<li><b>N9/N950: rzr fosdem-schedule</b><br />
-    <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a>,<br />
-    <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>.<br />
+<li><strong>N9/N950: rzr fosdem-schedule</strong><br>
+    <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a>,<br>
+    <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>.<br>
 </li>
-<li><b>Symbian: semperFosdem</b><br />
-    Port of fosdem-schedule for Symbian S60/Qt,<br />
-    <a href="http://redmine.semperpax.com/projects/semperfosdem/wiki">Website</a>,<br />
+<li><strong>Symbian: semperFosdem</strong><br>
+    Port of fosdem-schedule for Symbian S60/Qt,<br>
+    <a href="http://redmine.semperpax.com/projects/semperfosdem/wiki">Website</a>,<br>
     Last confirmed in 2011.
 </li>
 </ul>
 
-<h3>Raw schedule data</h3>
+<h2>Raw schedule data</h2>
 <p>
 The schedule data is available in:
 <ul>
@@ -114,8 +127,7 @@ The schedule data is available in:
 <li><a href="<%= pathof '/schedule/ical/' %>">iCal</a>
 <li><a href="<%= pathof '/schedule/xcal/' %>">xCal</a>
 </ul>
-</p>
 
 <p>
-Feedback and/or contributions? Share it on <a href="mailto:fosdem@lists.fosdem.org"</a>fosdem@lists.fosdem.org</a>.
+Feedback and/or contributions? Share it on <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
 </p>
