--- a/content/contact.html
+++ b/content/contact.html
@@ -38,7 +38,7 @@ title: Contact
 
 <p>
   During the event, the Infodesk is reachable by phone using the number
-  <a class="tel" hef="tel:+3227887474">+32 2 788 74 74</a> (for <u><strong>urgent</strong></u> matters only, please).
+  <a class="tel" href="tel:+3227887474">+32 2 788 74 74</a> (for <u><strong>urgent</strong></u> matters only, please).
 </p>
 
 <p>
