Add Geo URI link

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -21,6 +21,7 @@ sponsors_under_navigation: true
   </p>
   
   <ul class="unstyled">
+    <li><i class="icon-map-marker"></i> <a href="geo:50.812375,4.38073;u=100">Geo URI</a> (should open your preferred map application)</li>
     <li><i class="icon-map-marker"></i> <a target="_blank" href="https://maps.google.com/?q=50.812375%204.38073">Google Maps</a></li>
     <li><i class="icon-map-marker"></i> <a target="_blank" href="https://www.openstreetmap.org/?mlat=50.812375&mlon=4.38073">OpenStreetMap</a></li>
   </ul>
