donate: update donation link
closes #262

--- a/content/support/donate.html
+++ b/content/support/donate.html
@@ -33,5 +33,5 @@ navtitle: Donate
   your payment method in the next step.
 </p>
 <p>
-  <a class="btn-purple" href="https://useplink.com/payment/q7eMCJNcQcqTTKVqeMJj">Donate!</a>
+  <a class="btn-purple" href="https://payment-links.mollie.com/payment/uuPBpMmP7FPWtFZe94LWB">Donate!</a>
 </p>
